fix for broken layout with rows

--- a/src/_assets/stylesheets/main.scss
+++ b/src/_assets/stylesheets/main.scss
@@ -196,6 +196,11 @@ img {
   > article {
     width: calc(100vw - 525px);
     margin-left: 250px;
+    .row {
+      &:before, &:after {
+        display: none;
+      }
+    }
   }
 }
 #page-footer {
